mise en place du forum